# arc

./: .gitignore  Cargo.toml  Makefile.toml  build.sh  readme.md
src/: lib.rs  main.rs  types.rs
src/command/: add.rs  commit.rs  init.rs  list.rs  lock.rs  log.rs  pull.rs  restore.rs  unlock.rs
src/tests/: cli.rs  encrypt.rs  types.rs
src/tests/command/: add.rs  commit.rs  init.rs  list.rs  lock.rs  pull.rs  unlock.rs
src/utility/: encrypt.rs  manifest.rs  setup_fake_arc.rs
