[package]
name = "Arc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ed25519-dalek = { version = "2.0.0", features = [
  "rand_core",
] } # â† upgrade to 2.0.0
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.3"
hex = "0.4"
chrono = "0.4"
base64 = "0.21"
