[package]
name = "arc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
walkdir = "2.3"
sha2 = "0.10"
rand = "0.8.5"
hex = "0.4"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.19.1"
predicates = "3.1.3"
tempdir = "0.3.7"

[[bin]]
name = "arc"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
